--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -8,11 +8,7 @@
       %h2
         = t('workshops.title', host: @workshop.host.name)
         %br
-        %small #{humanize_date(@workshop.date_and_time)} #{@workshop.distance_of_time}
-        #workshop-time.time
-          %i.material-icons
-            access_time
-          = @workshop.start_and_end_time
+        %small #{humanize_date(@workshop.date_and_time, @workshop.ends_at, with_time: true)} #{@workshop.distance_of_time}
       - if @workshop.date_and_time.past?
         %label.label.warning= t('messages.already_taken_place')
   %section#banner
