--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -6,7 +6,7 @@
       %h2
         = @workshop.title
         %br
-        %small #{humanize_date(@workshop.date_and_time, with_time: true)} #{@workshop.distance_of_time}
+        %small #{humanize_date(@workshop.date_and_time, @workshop.ends_at, with_time: true)} #{@workshop.distance_of_time}
       - if @workshop.date_and_time.past?
         %label.label.warning= t('messages.already_taken_place')
 .alert-box.info
