--- a/app/views/workshop_invitation_mailer/attending_reminder.html.haml
+++ b/app/views/workshop_invitation_mailer/attending_reminder.html.haml
@@ -19,7 +19,8 @@
                   If you can no longer make it, please cancel your invitation <strong>before 15:00</strong> on the day of the event.
                   <a href='https://codebar.io/student-guide#attendance'>We have a three-strikes attendance policy for no-shows.</a>
                 %p
-                  <strong>Please do not turn up before #{(@workshop.date_and_time).strftime('%H:%M')}.</strong> If you are early, please wait in a nearby cafe.
+                  %strong Please do not turn up before #{(@workshop.date_and_time).strftime('%H:%M')}.
+                  If you are early, please wait in a nearby cafe.
 
         .content
           %table{ bgcolor: '#FFFFFF' }
@@ -27,7 +28,7 @@
               %td
                 %h4
                   Workshop
-                  %small #{humanize_date(@workshop.date_and_time, with_time: true)}#{@workshop.ends_at.present? ? " - " + @workshop.ends_at.strftime('%H:%M') : ""}
+                  %small #{humanize_date(@workshop.date_and_time, @workshop.ends_at, with_time: true)}
                 = link_to 'Update your attendance', full_url_for(invitation_url(@invitation)), class: 'btn'
 
         .content
