--- a/app/views/event_invitation_mailer/invite_coach.html.haml
+++ b/app/views/event_invitation_mailer/invite_coach.html.haml
@@ -24,7 +24,7 @@
               %td
                 %h4
                   #{@event.name}
-                  %small #{l(@event.date_and_time)} to #{l(@event.ends_at, format: :time)}
+                  %small #{humanize_date(@event.date_and_time, @event.ends_at, with_time: true)}
                 = link_to 'View invitation and RSVP', full_url_for(event_invitation_url(event_id: @event.slug, token: @invitation.token)), class: 'btn'
 
         .content
