--- a/app/views/virtual_workshops/show.html.haml
+++ b/app/views/virtual_workshops/show.html.haml
@@ -14,7 +14,7 @@
             access_time
           = @workshop.start_and_end_time
       - if @workshop.date_and_time.past?
-        %label.label.warning= t('workshops.already_taken_place')
+        %label.label.warning= t('messages.already_taken_place')
 
   %section#banner
     .row
