(Fix) Update references to images
e.g. `host.avatar` to `host.avatar.url`

This is in prep for a rails 5 upgrade.
Why? 

Rails 5.2 changed the `image_tag` behaviour which now only accepts a url. Up to Rails 5.1 is was possible to pass the uploader object and rails could guess.

--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -16,7 +16,7 @@
 
     .medium-6.large-3.columns
       %h4 Logo
-      = image_tag(@sponsor.avatar, alt: @sponsor.name)
+      = image_tag(@sponsor.avatar.url, alt: @sponsor.name)
 
     .medium-6.large-3.columns
       %h4 Contacts
