--- a/app/views/course_invitation_mailer/invite_student.html.haml
+++ b/app/views/course_invitation_mailer/invite_student.html.haml
@@ -35,7 +35,7 @@
           %table{ bgcolor: "#FFFFFF" }
             %tr
               %td.small{ width: "30%", style: "vertical-align: top; padding-right:10px;"}
-                =image_tag(@course.venue.avatar, alt: @course.venue.name)
+                =image_tag(@course.venue.avatar.url, alt: @course.venue.name)
               %td
                 %h4
                   Workshop
