--- a/app/views/shared_mailers/_venue.html.haml
+++ b/app/views/shared_mailers/_venue.html.haml
@@ -19,4 +19,4 @@
         #{host.accessibility_info}
 
   %td{ width: '30%', style: 'vertical-align: top;' }
-    = image_tag(host.avatar, alt: host.name)
+    = image_tag(host.avatar.url, alt: host.name)
