--- a/app/views/virtual_workshop_invitation_mailer/invite_coach.html.haml
+++ b/app/views/virtual_workshop_invitation_mailer/invite_coach.html.haml
@@ -40,7 +40,7 @@
                 - if @workshop.sponsors.any?
                   %h4 Sponsored by
                   - @workshop.sponsors.each do |sponsor|
-                    = image_tag(sponsor.avatar, alt: sponsor.name)
+                    = image_tag(sponsor.avatar.url, alt: sponsor.name)
                     %br
 
         .content
