--- a/app/views/admin/sponsors/index.html.haml
+++ b/app/views/admin/sponsors/index.html.haml
@@ -20,7 +20,7 @@
           %em Sponsored #{sponsor.workshop_sponsors.count} workshops
 
       .large-4.columns
-        = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
+        = image_tag(sponsor.avatar.url, class: 'sponsor', alt: sponsor.name)
       .large-3.columns
         %p= SponsorPresenter.new(sponsor).contact_info
 
