--- a/app/views/event_invitation_mailer/invite_student.html.haml
+++ b/app/views/event_invitation_mailer/invite_student.html.haml
@@ -38,7 +38,7 @@
                 %h4 Sponsors
                 - @event.sponsors.each do |sponsor|
                   = link_to sponsor.website do
-                    = image_tag(sponsor.avatar, style: 'max-height: 100px;', alt: sponsor.name)
+                    = image_tag(sponsor.avatar.url, style: 'max-height: 100px;', alt: sponsor.name)
 
         .content
           = render partial: 'shared_mailers/social'
