--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -59,7 +59,7 @@
             %li
               .row
                 .large-2.columns
-                  = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
+                  = image_tag(sponsor.avatar.url, class: 'sponsor', alt: sponsor.name)
                 .large-10.columns
                   =link_to sponsor.name, sponsor.website
                   %p
