--- a/app/views/invitations/show.html.haml
+++ b/app/views/invitations/show.html.haml
@@ -78,7 +78,7 @@
         %p
           = @host_address.to_html
       .medium-4.columns
-        = image_tag(@event.venue.avatar, class: 'sponsor-logo-image', alt: @event.venue.name)
+        = image_tag(@event.venue.avatar.url, class: 'sponsor-logo-image', alt: @event.venue.name)
     .row
       .large-12.columns
         %iframe{ width: '100%', height: '250', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
