--- a/app/views/virtual_workshops/show.html.haml
+++ b/app/views/virtual_workshops/show.html.haml
@@ -34,7 +34,7 @@
           %ul.row.no-bullet
             - @workshop.sponsors.each do |sponsor|
               %li.small-4.columns
-                = image_tag(sponsor.avatar, class: 'sponsor', alt: sponsor.name)
+                = image_tag(sponsor.avatar.url, class: 'sponsor', alt: sponsor.name)
                 %p
                   = link_to sponsor.name, sponsor.website
 
