--- a/app/views/virtual_workshop_invitation_mailer/attending_reminder.html.haml
+++ b/app/views/virtual_workshop_invitation_mailer/attending_reminder.html.haml
@@ -14,10 +14,10 @@
               %td
                 %h3 Hi #{@member.name},
                 %p.lead
-                  This is a quick email to remind you that you have signed up for tomorrow's workshop.
+                  This is a quick email to remind you that you have signed up for #{@workshop.day_temporal_pronoun}'s workshop.
                 %p
-                  If you can no longer make it, please cancel your invitation <strong>before 15:00</strong> on the day of the event.
-                  <a href='https://codebar.io/student-guide#attendance'>We have a three-strikes attendance policy for no-shows.</a>
+                  If you can no longer make it make sure you cancel your invitation before #{@workshop.day_temporal_pronoun} <strong>#{I18n.l(@workshop.rsvp_closing_date_and_time, format: :email_title)}</strong> so we can reallocate your spot to someone else.
+                  Remember that we have a <a href='https://codebar.io/student-guide#attendance'>three-strikes attendance policy</a> for no-shows.
 
                 = render partial: 'how_to_join_info'
 
