--- a/app/views/workshop_invitation_mailer/attending_reminder.html.haml
+++ b/app/views/workshop_invitation_mailer/attending_reminder.html.haml
@@ -14,13 +14,12 @@
               %td
                 %h3 Hi #{@member.name},
                 %p.lead
-                  This is a quick email to remind you that you have signed up for tomorrow's workshop.
+                  This is a quick email to remind you that you have signed up for #{@workshop.day_temporal_pronoun}'s workshop.
                 %p
-                  If you can no longer make it, please cancel your invitation <strong>before 15:00</strong> on the day of the event.
-                  <a href='https://codebar.io/student-guide#attendance'>We have a three-strikes attendance policy for no-shows.</a>
+                  If you can no longer make it make sure you cancel your invitation before #{@workshop.day_temporal_pronoun} <strong>#{I18n.l(@workshop.rsvp_closing_date_and_time, format: :email_title)}</strong> so we can reallocate your spot to someone else.
+                  Remember that we have a <a href='https://codebar.io/student-guide#attendance'>three-strikes attendance policy</a> for no-shows.
                 %p
-                  %strong Please do not turn up before #{(@workshop.date_and_time).strftime('%H:%M')}.
-                  If you are early, please wait in a nearby cafe.
+                  As most of our hosts are busy before the workshops begin, do not turn up before #{(@workshop.date_and_time).strftime('%H:%M')} as you may not be allowed in. If you are early, we suggest waiting at a nearby cafe.
 
         .content
           %table{ bgcolor: '#FFFFFF' }
