Change DateTimeConcerns from Past? to before_today?
- past means:  time_to_test < Time.zone.now
- DateTimeConcerns defined it as:
  time_to_test < Time.zone.today
    - Time.zone.today is the first moment of the day.
      Date + 00:00:00

Elsewhere in the program 'past' is defined correctly.
 - ActiveSupport::TimeWithZone past?
 - Invitable.past (a scope)
 - When you cast (@workshop.date_time - 30.minutes).past? you get
   ActiveSupport::TimeWithZone past?

So I have change past? to before_today? We can then introduce
past? with delegation to ActiveSupport's past? as we do with
forward?

    # date_time_concerns
    delegate :future?, to: :date_and_time
    delegate :past?, to: :date_and_time

--- a/app/views/workshops/_actions.html.haml
+++ b/app/views/workshops/_actions.html.haml
@@ -2,7 +2,7 @@
   %p
     %label.label.info= t('workshops.not_open_for_rsvp')
 - else
-  - if @workshop.past? and !logged_in?
+  - if @workshop.before_today? and !logged_in?
     %p= t('workshops.sign_up_to_be_invited')
   - else
     - if logged_in?
