--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -9,7 +9,7 @@
         = t('workshops.title', host: @workshop.host.name)
         %br
         %small #{humanize_date(@workshop.date_and_time, @workshop.ends_at, with_time: true)} #{@workshop.distance_of_time}
-      - if @workshop.past?
+      - if @workshop.before_today?
         %label.label.warning= t('messages.already_taken_place')
   %section#banner
     .row
