--- a/app/views/invitation/show.html.haml
+++ b/app/views/invitation/show.html.haml
@@ -7,7 +7,7 @@
         = @workshop.title
         %br
         %small #{humanize_date(@workshop.date_and_time, @workshop.ends_at, with_time: true)} #{@workshop.distance_of_time}
-      - if @workshop.past?
+      - if @workshop.before_today?
         %label.label.warning= t('messages.already_taken_place')
 .alert-box.info
   .row
@@ -26,7 +26,7 @@
 
     .medium-5.large-4.columns
       .panel
-        - if @workshop.past?
+        - if @workshop.before_today?
           %em= t('workshops.already_taken_place')
         - else
           - if @invitation.attending.eql?(true)
