--- a/app/views/meetings/_meeting_actions.html.haml
+++ b/app/views/meetings/_meeting_actions.html.haml
@@ -16,7 +16,7 @@
   %h4 RSVP
 
   - if logged_in?
-    - if @meeting.past?
+    - if @meeting.before_today?
       %p This event has already occurred.
 
     - elsif current_user.banned?
