Simplify donation checkbox i18n label
Keys named `html` are marked as HTML safe[1]. This change pushes the
HTML rendering into the i18n translation files and merges the two i18n
values into one.

[1]: https://guides.rubyonrails.org/v4.2/i18n.html#using-safe-html-translations

--- a/app/views/member/jobs/new.html.haml
+++ b/app/views/member/jobs/new.html.haml
@@ -31,7 +31,7 @@
               %label{for: 'short'}= t('member.jobs.new.short')
             %li
               %input#donation{type: 'checkbox'}
-              %label{for: 'donation'}= t('member.jobs.new.pay', link: link_to(t('member.jobs.new.donation'), new_donation_path)).html_safe
+              %label{for: 'donation'}= t('member.jobs.new.pay.html', link: new_donation_path)
 
     %br
     .row
