--- a/app/assets/stylesheets/partials/_hero.scss
+++ b/app/assets/stylesheets/partials/_hero.scss
@@ -40,7 +40,7 @@ section.hero {
 
 @media only screen and (max-width: 40em) {
   section.hero {
-    padding: 20px 20px 60px;
+    padding: 20px 0;
     height: 300px;
   }
 }
