--- a/app/views/members/_testimonials.html.haml
+++ b/app/views/members/_testimonials.html.haml
@@ -1,12 +1,9 @@
-%ul{ "data-orbit" => true, "data-options" => " animation:fade;timer_speed:60000;next_on_click:false;bullets:false;slide_number:false;circular:true;navigation_arrows:false;pause_on_hover:false;" }
+%ul{ "data-orbit" => true, "data-options" => " animation:fade;timer_speed:60000;next_on_click:false;bullets:false;slide_number:false;circular:true;navigation_arrows:false;pause_on_hover:false;timer:false;" }
   - @testimonials.each_with_index do |testimonial, index|
     %li{ "data-orbit-slide" => "testimonial-#{index}" }
-      .row
-        .large-11.medium-10.small-10.columns
-          %blockquote
-            %p= testimonial.text
-            %cite.right
-              = testimonial.member.full_name
-        .large-1.medium-2.small-2.columns
-          %br
-          = image_tag(testimonial.member.avatar(40), class: 'th radius', alt: testimonial.member.name)
+      %blockquote
+        %p= testimonial.text
+        %footer.clearfix
+          = image_tag(testimonial.member.avatar(32), class: 'th radius left', alt: testimonial.member.name)
+          %cite.left
+            = testimonial.member.full_name
