--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [:admin, @sponsor], :html => {:multipart => true} do |f|
+= simple_form_for [:admin, @sponsor], :html => {:multipart => true, novalidate: true } do |f|
   .row
     .large-6.columns
       = f.input :name
